build.gradle - add minecraft version to jar name

--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ processResources {
 }
 
 shadowJar {
-    archiveFileName = project.name + "-" + project.version + ".jar"
+    archiveFileName = project.name + "-" + project.version + "-" + minecraft + ".jar"
 //    relocate("org.bstats", "com.shanebeestudios.skbee.metrics")
 }
 
